
  - [feature] Added some decent context managers
    to Engine, Connection:

        with engine.begin() as conn:
            <work with conn in a transaction>

    and:

        with engine.connect() as conn:
            <work with conn>

    Both close out the connection when done,
    commit or rollback transaction with errors
    on engine.begin().

- mysql
  - [feature] Added support for the "isolation_level"
    parameter to all MySQL dialects.  Thanks
    to mu_mind for the patch here. [ticket:2394]

- oracle
  - [feature] Added a new create_engine() flag
    coerce_to_decimal=False, disables the precision
    numeric handling which can add lots of overhead
    by converting all numeric values to 
    Decimal.  [ticket:2399]

  - [bug] Added missing compilation support for 
    LONG [ticket:2401]

0.7.5 (January 28, 2012)
=====
- orm
  - [bug] Fixed issue where modified session state
    established after a failed flush would be committed
    as part of the subsequent transaction that 
    begins automatically after manual call 
    to rollback().   The state of the session is
    checked within rollback(), and if new state
    is present, a warning is emitted and 
    restore_snapshot() is called a second time,
    discarding those changes. [ticket:2389]

  - [bug] Fixed regression from 0.7.4 whereby
    using an already instrumented column from a
    superclass as "polymorphic_on" failed to resolve
    the underlying Column.  [ticket:2345]

  - [bug] Raise an exception if xyzload_all() is
    used inappropriately with two non-connected
    relationships.  [ticket:2370]

  - [feature] Added "class_registry" argument to
    declarative_base().  Allows two or more declarative
    bases to share the same registry of class names.

  - [feature] query.filter() accepts multiple 
    criteria which will join via AND, i.e.
    query.filter(x==y, z>q, ...)

  - [feature] Added new capability to relationship
    loader options to allow "default" loader strategies.